# SSL-bootcamp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_checks.yaml
contrastive_learning/: ICL_LOE_BAF.ipynb  README.md
contrastive_learning/ICL/: ICL.ipynb  data_generator.py  myutils.py  pyod_base.py
contrastive_learning/LatentOE/: LatentOE_Notebook.ipynb  utils.py
contrastive_learning/LatentOE/config/: Dataset_Class.py  base.py
contrastive_learning/LatentOE/config_files/: config_arrhy.yml  config_cifar10.yml
contrastive_learning/LatentOE/evaluation/: Experiments.py  Kvariants_Eval.py  experiments.py  k_variants_eval.py
contrastive_learning/LatentOE/loader/: LoadData.py  load_data.py  utils.py
contrastive_learning/LatentOE/models/: FeatNets.py  Losses.py  NeutralAD.py  NeutralAD_trainer.py  TabNets.py  feat_nets.py  losses.py  neutral_ad.py  neutral_ad_trainer.py  tab_nets.py
masked_modelling/: experiments_simmtm-BeijingPM25Quality-forecast.ipynb
masked_modelling/datasets/BeijingPM25Quality/: test_y.csv  train_y.csv
masked_modelling/simmtm/: simmtm-BeijingPM25Quality-forecasting.ipynb
masked_modelling/tabret/: data_preprocessing.ipynb  tabret.ipynb
masked_modelling/tabret/model/: __init__.py  ft_transformer.py  rtdl_modules.py  tabret.py  tabret_cls.py  utils.py
self_distillation/: data2vec_vision.ipynb
src/contrastive_learning/ICL/: data_generator.py  myutils.py  pyod_base.py
src/contrastive_learning/LatentOE/: utils.py
src/contrastive_learning/LatentOE/config/: base.py  datasets.py
src/contrastive_learning/LatentOE/config_files/: config_thyroid.yml
src/contrastive_learning/LatentOE/evaluation/: experiments.py  k_variants_eval.py
src/contrastive_learning/LatentOE/loader/: __init__.py  load_data.py  utils.py
src/contrastive_learning/LatentOE/models/: feat_nets.py  losses.py  neutral_ad.py  neutral_ad_trainer.py  tab_nets.py
src/masked_modelling/simmtm/: simmtm-BeijingPM25Quality-forecasting.ipynb
src/masked_modelling/tabret/: data_preprocessing.ipynb  tabret.ipynb
src/masked_modelling/tabret/model/: ft_transformer.py  rtdl_modules.py  tabret.py  tabret_cls.py  utils.py
src/self_distillation/: data2vec_vision.ipynb
(+2 files in other folders)
