[project]
name = "ssl-bootcamp"
version = "0.1.0"
description = "Reference implementations for the Vector Institute's self-supervised learning (SSL) bootcamp (2023)"
readme = "README.md"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
license = "MIT"
repository = "https://github.com/VectorInstitute/SSL-Bootcamp"
requires-python = ">=3.9"
dependencies = [
    "copulas>=0.12.0",
    "deepod>=0.4.1",
    "ipykernel>=6.29.5",
    "lightning==2.0.6",
    "lightning-bolts>=0.7.0",
    "matplotlib>=3.7.5",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "optuna>=4.2.1",
    "pandas>=2.0.3",
    "pyod>=2.0.4",
    "pytorch-tabular==1.0.2",
    "rtdl==0.0.13",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "timm==0.9.2",
    "toml>=0.10.2",
    "torch==1.13.0",
    "torchvision==0.14.0",
    "transformers==4.31.0",
    "transtab>=0.0.5",
    "wandb>=0.19.9",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.11.4",
]

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 119

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["A", "B", "C", "E", "F", "I", "W"]
fixable = ["A", "B", "COM", "C", "C4", "RET", "SIM", "ICN", "Q", "RSE", "E", "F", "I", "W", "PL"]
ignore = ["E501", "C901"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 119

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.nbqa.md]
blacken-docs = true
